# akselos-workshop2

./: .dockerignore  .gitignore  Dockerfile.next.dev  Dockerfile.nginx  Makefile  README.md  docker-compose-pro.yml  docker-compose.yml  install-docker-compose.sh  install-docker.sh
django/: Dockerfile  Makefile  env.template  manage.py  pyproject.toml  requirements.txt
django/api/: admin.py  auth.py  models.py  permissions.py  resources.py  serializers.py  urls.py
django/api/migrations/: 0001_initial.py  0002_alter_assets_options_alter_departments_options_and_more.py  0003_users_is_active_users_is_superuser_and_more.py  0004_alter_records_work_package.py  0005_alter_projects_options_alter_records_options_and_more.py  0006_rename_is_superuser_user_is_admin_user_is_staff_and_more.py  0007_user_groups_user_user_permissions.py  0008_auto_20240421_1418.py  0009_auto_20240421_1604.py  0010_project_status.py  0011_workpackage_status.py  0012_project_authorized_teams_project_authorized_users_and_more.py  (+2 more)
django/timerecorder/: asgi.py  settings.py  urls.py  wsgi.py
django/utils/: helpers.py
scripts/: Dockerfile  Makefile  package.json  pyproject.toml  requirements.txt  run.js  run.ts  send_reminder.py  tsconfig.json  update_db_from_client.py  update_db_from_server.py
scripts/data/: departments.csv  employee_to_add.csv  employee_to_remove.csv  employee_to_update.csv  init_template.sql  projects.csv  raw_ytd.csv  timerecord.csv  timerecordFeb.csv  timerecordJan.csv  timerecordMar.csv  timerecordNov.csv  workPackage.csv  ytd.csv
scripts/template/: reminder.html
(+816 files in other folders)
